# AegisUploaderV3

./: .env.example  .gitignore  README.md  docker-compose.ci.yml  docker-compose.yml  otel-collector-config.yaml  package-lock.json  package.json  test.css
.github/: dependabot.yml
.github/workflows/: cert-manager-release.yml  codeql.yml  pytest.yml  python-app.yml  release.yml
Scripts/: generateCert.ps1  migrateDB.ps1
Scripts/certs/: Dockerfile  renew.sh
azurite_data/: AzuriteConfig  __azurite_db_blob__.json  __azurite_db_blob_extent__.json
azurite_data/__blobstorage__/: 1d5a9ed9-e822-4dad-ae00-c0d78f0011b6
backend/: .dockerignore  .env.example  AppConstants.py  Dockerfile  Utils.py  alembic.ini  create_tables.py  main.py  pyproject.toml  startup.sh  supervisord.conf
backend/migrations/: env.py
backend/migrations/versions/: 0ba38bbfc6b5_uploadchunksdb.py  1ae52079ba72_add_storage_provider_to_uplaodrecord.py  4d8bf879491e_created_upload_sessions.py  7704833e2889_add_hubspot_to_linkdb.py  7d79f24cb107_initial_schema.py
backend/modules/: DataCleaner.py  Ekeys.py  HubSpotIntegration  HubSpotIntegration.py  HubSpotIntegration_Links.py  LinkGenerator.py  StorageProvider.py  UFO.py  __init__.py  auth.py  deletionRequest.py  downloadData.py  logging.py  models.py  refreshStatus.py  scheduler.py  telemetry.py  uploadSchemas.py  uploader.py
backend/tests/: conftest.py  test_deletionRequest.py  test_hubspotintegration.py  test_hubspotintegration_links.py  test_link_generator.py  test_main.py  test_uploader.py
frontend/: index.html  package-lock.json  package.json
frontend/Scripts/: generateFonts.py
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ApiErrorAlert.css  ApiErrorAlert.tsx  CreateLinkForm.css  CreateLinkForm.tsx  CreateUploadLinkForm.css  CreateUploadLinkForm.tsx  DataTable.css  DataTable.tsx  DataTablePage.css  LinkActionCard.css  LinkActionCard.tsx  LinksTablePage.tsx  Navbar.jsx  PortalHome.css  PortalHome.tsx  PortalHomePage.css  PortalHomePage.tsx
frontend/src/layouts/: AdminLayout.tsx  AppLayout.css  AppLayout.tsx  CustomerLayout.tsx  CustomerLayoutContext.tsx  CustomerUploadSidebar.css  CustomerUploadSidebar.tsx  Layout.css  PortalLayout.tsx  SupportLayout.css  (+1 more)
nginx/: DOCKERFILE  docker-entrypoint.sh  nginx.azure.conf.template  nginx.conf  nginx.conf.template
(+67 files in other folders)
