[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "azure-storage-blob>=12.30.0",
    "fastapi>=0.115.0",
    "pyjwt[crypto]>=2.13.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]
