[project]
name = "backend"
version = "0.1.0"
description = "Backend for Aegis interns 2026 project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "azure-keyvault-secrets>=4.11.0",
    "azure-mgmt-resource>=26.0.0",
    "azure-mgmt-storage>=25.0.0",
    "azure-storage-blob>=12.30.0",
    "azure-storage-file-share>=12.26.0",
    "fastapi>=0.138.0",
    "httpx2>=2.4.0",
    "hubspot-api-client>=12.0.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-exporter-otlp>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-instrumentation-logging>=0.64b0",
    "opentelemetry-instrumentation-requests>=0.64b0",
    "opentelemetry-sdk>=1.43.0",
    "psycopg[binary]>=3.3.4",
    "pyjwt[crypto]>=2.13.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
    "pathvalidate>=3.3.1",
    "blake3>=1.0.9",
    "pytest-asyncio>=1.4.0",
]
